SFDC Automation/src/objects/SFDC_Projects__c.object
<CustomObject>
    <description>Object to be used by Sales Operations, IT and other areas that may be working on projects related to SFDC. The intention is to have a repository of tasks where the team posts what they are doing around these projects. It may end up being a basic project control mechanism but the initial intention is to log activities and comments.</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main responsible individual for this project</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_ROI__c</fullName>
        <description>Brief description of the estimated cost and ROI for the project. Details need to be included in either an attachment or a chat to the project</description>
        <label>Cost / ROI</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Finish_Date__c</fullName>
        <label>Estimated Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Main_Benefits__c</fullName>
        <description>Brief description of the benefits. Additional details need to be added either as an attachment or in a chat to the object</description>
        <label>Main Benefits</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Indicates the priority of this project for the person that it has been assigned to. If multiple projects have the same priority, it indicates that the person responsible is expected to work on them at the same time. Use the decimal to indicate priorities within those</description>
        <label>Priority</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>Brief description of the main areas the project will and will not cover</description>
        <label>Scope</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WeeklyMeeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Identify topics related to SFDC Weekly Meeting</description>
        <label>WeeklyMeeting</label>
        <type>Checkbox</type>
    </fields>
    <label>SFDC Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Estimated_Finish_Date__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Estimated_Finish_Date__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Discarded</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>Weekly_Meeting</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WeeklyMeeting__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Weekly Meeting</label>
    </listViews>
    <nameField>
        <label>SFDC Projects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>